# holo-youtube-scraper

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  openclaw_deploy_skill.sh  pyproject.toml
.github/: youtube-tasks.yml
.github/workflows/: release.yml  tests.yml  youtube-automation.yml
automation/: __init__.py  youtube_automation.py
data/ai_tracker/2026-03-10/: manifest.json
data/ai_tracker/2026-03-12/: manifest.json
data/ai_tracker/2026-03-13/: manifest.json
data/ai_tracker/2026-03-14/: manifest.json
data/ai_tracker/2026-03-15/: manifest.json
data/ai_tracker/2026-03-16/: manifest.json
data/ai_tracker/2026-03-17/: manifest.json
data/ai_tracker/2026-03-18/: manifest.json
data/ai_tracker/2026-03-19/: manifest.json
data/ai_tracker/2026-03-20/: manifest.json
data/ai_tracker/2026-03-21/: manifest.json
data/ai_tracker/2026-03-22/: manifest.json
data/ai_tracker/2026-03-23/: manifest.json
data/ai_tracker/2026-03-24/: manifest.json
data/ai_tracker/2026-03-25/: manifest.json
data/ai_tracker/2026-03-26/: manifest.json
data/ai_tracker/2026-03-27/: manifest.json
data/ai_tracker/2026-03-28/: manifest.json
data/ai_tracker/2026-03-29/: manifest.json
data/ai_tracker/2026-03-30/: manifest.json
docs/: automation.md  research.md
references/: commands.md  output-schema.md  troubleshooting.md
scripts/: __init__.py  client.py  config.py  main.py  transcript.py  youtube.sh  youtube_automation.py
src/youtube_scraper/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  summarizer.py  transcript.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_openclaw_assets.py  test_transcript.py  test_youtube_automation.py
(+1204 files in other folders)
