[project]
name = "youtube-scraper"
version = "0.1.0"
description = "YouTube channel popular videos scraper with transcript extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.192.0",
    "rich>=14.3.3",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_scraper"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
youtube-scraper = "youtube_scraper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=youtube_scraper --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["youtube_scraper"]

[tool.coverage.report]
exclude_lines = ["if __name__", "raise NotImplementedError"]