[project]
name = "holo-youtube-scraper"
version = "0.3.0"
description = "Skill-first YouTube channel video and transcript tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.192.0",
    "PySocks>=1.7.1",
    "PyYAML>=6.0.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".uv-cache", ".tmp", "pytest-cache-files-*"]
addopts = "-v --tb=short --cov=scripts --cov=automation --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["scripts", "automation"]

[tool.coverage.report]
exclude_lines = ["if __name__", "raise NotImplementedError"]
